--- a/rate/rate.html
+++ b/rate/rate.html
@@ -17,57 +17,81 @@
             </div>
         </header>
         <!--  -->
-        <script type="text/javascript">
-            const rateHeader = document.querySelector('.rate-header');
-
-            rateHeader.addEventListener('click',() =>{
-                
-            })
-        </script>
+        
         <section class="rate-boxes-container">
             <article class="rate-box">
-                <div class="rate-header">
+                <label for="checkbox1" class="rate-header" id="d1h">
+                    <input type="checkbox" id="checkbox1" class="checkbox hidden">
                     <span id="dday">DAY1</span>
+                </label>
+                <div class="rate-printview hidden" id="d1p">
                 </div>
-                <div class="rate-printview">
-                </div>
-                <section class="type">
+                <section class="type hidden" id="d1t">
                     <form id="type-form">
                         <input id="type-input" type="text" placeholder="type here..." required>
                     </form>
                 </section>
             </article>
             <article class="rate-box">
-                <div class="rate-header">
+                <label for="checkbox2" class="rate-header" id="d2h">
+                    <input type="checkbox" id="checkbox2" class="checkbox hidden">
                     <span id="dday">DAY2</span>
+                </label>
+                <div class="rate-printview hidden" id="d2p">
                 </div>
-                <div class="rate-printview">
-                </div>
-                <section class="type">
+                <section class="type hidden" id="d2t">
                     <form id="type-form">
                         <input id="type-input" type="text" placeholder="type here..." required>
                     </form>
                 </section>
             </article>
             <article class="rate-box">
-                <div class="rate-header">
+                <label for="checkbox3" class="rate-header" id="d3h">
+                    <input type="checkbox" id="checkbox3" class="checkbox hidden">
                     <span id="dday">DAY3</span>
+                </label>
+                <div class="rate-printview hidden" id="d3p">
                 </div>
-                <div class="rate-printview">
-                </div>
-                <section class="type">
+                <section class="type hidden" id="d3t">
                     <form id="type-form">
                         <input id="type-input" type="text" placeholder="type here..." required>
                     </form>
                 </section>
             </article>
             <article class="rate-box">
-                <div class="rate-header">
+                <label for="checkbox4" class="rate-header" id="d4h">
+                    <input type="checkbox" id="checkbox4" class="checkbox hidden">
                     <span id="dday">DAY4</span>
+                </label>
+                <div class="rate-printview hidden" id="d4p">
                 </div>
-                <div class="rate-printview">
+                <section class="type hidden" id="d4t">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+            <article class="rate-box">
+                <label for="checkbox5" class="rate-header" id="d5h">
+                    <input type="checkbox" id="checkbox5" class="checkbox hidden">
+                    <span id="dday">DAY5</span>
+                </label>
+                <div class="rate-printview hidden" id="d5p">
                 </div>
-                <section class="type">
+                <section class="type hidden" id="d5t">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+            <article class="rate-box">
+                <label for="checkbox6" class="rate-header" id="d6h">
+                    <input type="checkbox" id="checkbox6" class="checkbox hidden">
+                    <span id="dday">DAY6</span>
+                </label>
+                <div class="rate-printview hidden" id="d6p">
+                </div>
+                <section class="type hidden" id="d6t">
                     <form id="type-form">
                         <input id="type-input" type="text" placeholder="type here..." required>
                     </form>
@@ -75,5 +99,6 @@
             </article>
         </section>
     </div>
+    <script src="./opcl.js"></script>
 </body>
 </html>
