--- a/dairy/dairy.html
+++ b/dairy/dairy.html
@@ -9,121 +9,116 @@
     <title>kota-d1</title>
 </head>
 <body>
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+    <main class="dairy-boxes-container">
+        <section class="dairy-box">
+            <label for="checkbox1"  class="dairy-header" id="c1">
                 <p>DAY1</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox1" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d1">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+        <section class="dairy-box">
+            <label for="checkbox2"  class="dairy-header" id="c2">
                 <p>DAY2</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox2" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d2">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+        <section class="dairy-box">
+            <label for="checkbox3"  class="dairy-header" id="c3">
                 <p>DAY3</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox3" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d3">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+        <section class="dairy-box">
+            <label for="checkbox4"  class="dairy-header" id="c4">
                 <p>DAY4</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox4" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d4">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+        <section class="dairy-box">
+            <label for="checkbox5"  class="dairy-header" id="c5">
                 <p>DAY5</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox5" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d5">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-    <div class="d">
-        <section class="d-s1" id="d1-s1">
-            <div class="d-header" id="d1-s1-header">
+        <section class="dairy-box">
+            <label for="checkbox6"  class="dairy-header" id="c6">
                 <p>DAY6</p>
-            </div>
-            <div class="d-nav"id="d1-s1-nav">
-                <span class="d-nav-edit" id="d1-edit">EDIT</span>
-                <span class="d-nav-save" id="d1-save">SAVE</span>
-            </div>
-        </section>
-        <!--  -->
-        <section class="d-s2" id="d1-s2">
-            <div class="d-s2-boxing" id="d1-s2-boxing">
-                <div class="d-content" id="d-content">
+                <input type="checkbox" id="checkbox6" class="checkbox hidden">
+            </label>
+            <!--  -->
+            <article class="" id="d6">
+                <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
-            </div>
+                <div class="type" >
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                        <input type="submit">
+                    </form>
+                </div>
+            </article>
         </section>
-    </div>
-
+    </main>
+    <script src="./opcl.js"></script>
 </body>
 </html>
