--- a/rate/rate.html
+++ b/rate/rate.html
@@ -18,86 +18,98 @@
         </header>
         <!--  -->
         
-        <section class="rate-boxes-container">
-            <article class="rate-box">
+        <main class="rate-boxes-container">
+            <section class="rate-box">
                 <label for="checkbox1" class="rate-header" id="d1h">
                     <input type="checkbox" id="checkbox1" class="checkbox hidden">
                     <span id="dday">DAY1</span>
                 </label>
-                <div class="rate-printview hidden" id="d1p">
-                </div>
-                <section class="type hidden" id="d1t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-            <article class="rate-box">
+                <article id="d1" class="hidden">
+                    <div class="rate-printview" id="d1p">
+                    </div>
+                    <div class="type" id="d1t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="rate-box">
                 <label for="checkbox2" class="rate-header" id="d2h">
                     <input type="checkbox" id="checkbox2" class="checkbox hidden">
                     <span id="dday">DAY2</span>
                 </label>
-                <div class="rate-printview hidden" id="d2p">
-                </div>
-                <section class="type hidden" id="d2t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-            <article class="rate-box">
+                <article id="d2" class="hidden">
+                    <div class="rate-printview" id="d2p">
+                    </div>
+                    <div class="type" id="d2t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="rate-box">
                 <label for="checkbox3" class="rate-header" id="d3h">
                     <input type="checkbox" id="checkbox3" class="checkbox hidden">
                     <span id="dday">DAY3</span>
                 </label>
-                <div class="rate-printview hidden" id="d3p">
-                </div>
-                <section class="type hidden" id="d3t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-            <article class="rate-box">
+                <article id="d3" class="hidden">
+                    <div class="rate-printview" id="d3p">
+                    </div>
+                    <div class="type" id="d3t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="rate-box">
                 <label for="checkbox4" class="rate-header" id="d4h">
                     <input type="checkbox" id="checkbox4" class="checkbox hidden">
                     <span id="dday">DAY4</span>
                 </label>
-                <div class="rate-printview hidden" id="d4p">
-                </div>
-                <section class="type hidden" id="d4t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-            <article class="rate-box">
+                <article id="d4" class="hidden">
+                    <div class="rate-printview" id="d4p">
+                    </div>
+                    <div class="type" id="d4t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="rate-box">
                 <label for="checkbox5" class="rate-header" id="d5h">
                     <input type="checkbox" id="checkbox5" class="checkbox hidden">
                     <span id="dday">DAY5</span>
                 </label>
-                <div class="rate-printview hidden" id="d5p">
-                </div>
-                <section class="type hidden" id="d5t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-            <article class="rate-box">
+                <article id="d5" class="hidden">
+                    <div class="rate-printview" id="d5p">
+                    </div>
+                    <div class="type" id="d5t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="rate-box">
                 <label for="checkbox6" class="rate-header" id="d6h">
                     <input type="checkbox" id="checkbox6" class="checkbox hidden">
                     <span id="dday">DAY6</span>
                 </label>
-                <div class="rate-printview hidden" id="d6p">
-                </div>
-                <section class="type hidden" id="d6t">
-                    <form id="type-form">
-                        <input id="type-input" type="text" placeholder="type here..." required>
-                    </form>
-                </section>
-            </article>
-        </section>
+                <article id="d6" class="hidden">
+                    <div class="rate-printview" id="d6p">
+                    </div>
+                    <div class="type" id="d6t">
+                        <form id="type-form">
+                            <input id="type-input" type="text" placeholder="type here..." required>
+                        </form>
+                    </div>
+                </article>
+            </section>
+        </main>
     </div>
     <script src="./opcl.js"></script>
 </body>
