--- a/dairy/dairy.html
+++ b/dairy/dairy.html
@@ -16,7 +16,7 @@
                 <input type="checkbox" id="checkbox1" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d1">
+            <article class="hidden" id="d1">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
@@ -34,7 +34,7 @@
                 <input type="checkbox" id="checkbox2" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d2">
+            <article class="hidden" id="d2">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
@@ -52,7 +52,7 @@
                 <input type="checkbox" id="checkbox3" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d3">
+            <article class="hidden" id="d3">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
@@ -70,7 +70,7 @@
                 <input type="checkbox" id="checkbox4" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d4">
+            <article class="hidden" id="d4">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
@@ -88,7 +88,7 @@
                 <input type="checkbox" id="checkbox5" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d5">
+            <article class="hidden" id="d5">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
@@ -106,7 +106,7 @@
                 <input type="checkbox" id="checkbox6" class="checkbox hidden">
             </label>
             <!--  -->
-            <article class="" id="d6">
+            <article class="hidden" id="d6">
                 <div class="rate-printview">
                     <span>(empty)</span>
                 </div>
