--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div id="main-s2-header">
                     <span id="dday">DAY1</span>
                 </div>
-                <div id="main-s2-schadule" class="dp-none" >스케줄
+                <div id="main-s2-schadule" class="hidden" >스케줄
                 </div>
-                <a id="main-s2-footer" class="dp-none">전체 일정 보기</a>
+                <a id="main-s2-footer" class="hidden">전체 일정 보기</a>
                 <div id="name">
                     <div id="name-header">Choose traveler's Name</div>
                     <div id="names">
