--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <div id="main-s2-header">
                     <span id="dday">DAY1</span>
                 </div>
-                <div id="main-s2-schadule" class="hidden" >스케줄
+                <div id="main-s2-schadule" class="schadule hidden">
+                    즐길 준비 되셨습니꽈?!
                 </div>
                 <a id="main-s2-footer" class="hidden">전체 일정 보기</a>
                 <div id="name">
@@ -69,6 +70,7 @@
     <script src="/indextime.js"></script>
     <script src="/indexdday.js"></script>
     <script src="/name.js"></script>
+    <script src="/schadule.js"></script>
 
     <script src="/app.js"></script>    
 </body>
