--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="main-s2-schadule" class="schadule hidden">
                     즐길 준비 되셨습니꽈?!
                 </div>
-                <a id="main-s2-footer" class="hidden">전체 일정 보기</a>
+                <a id="main-s2-footer" href="/schadule.html" class="hidden">전체 일정 보기</a>
                 <div id="name">
                     <div id="name-header">Choose traveler's Name</div>
                     <div id="names">
