--- a/chat/chat.html
+++ b/chat/chat.html
@@ -9,24 +9,27 @@
     <title>kota chat</title>
 </head>
 <body>
-        <section class="chat">
-            <div class="chats" id="chats">
-                <!-- <div class="single-chat" id="single-chat">
-                    <div class="chat-name" id="chat-name">종훈</div>
-                    <div>
-                        <span class="chat-text" id="chat-text">ㅇㄷ?</span>
-                        <span class="chat-time" id="chat-time">00:00</span>
-                    </div>
-                </div> -->
+    <!-- <div class="single-chat" id="single-chat">
+        <div class="chat-name" id="chat-name">종훈</div>
+        <div>
+            <span class="chat-text" id="chat-text">ㅇㄷ?</span>
+            <span class="chat-time" id="chat-time">00:00</span>
+        </div>
+    </div> -->
+    <section class="chat">
+        <div class="chats" >
+            <div id="chats">
+                
             </div>
-        </section>
-        <section class="type">
-            <form id="type-form">
-                <input id="type-input" type="text" placeholder="type here..." required>
-            </form>
-        </section>
+        </div>
+    </section>
+    <section class="type">
+        <form id="type-form">
+            <input id="type-input" type="text" placeholder="type here..." required>
+        </form>
+    </section>
 
-    <script src="./firebaseComfig.js"></script>
-    <script src="./chat.js"></script>
+    <script type="module" src="./index.js"></script>
+    <script type="module" src="./firebase.js"></script>
 </body>
 </html>
