--- a/rate/rate.html
+++ b/rate/rate.html
@@ -24,12 +24,12 @@
                     <input type="checkbox" id="checkbox1" class="checkbox hidden">
                     <span id="dday">DAY1</span>
                 </label>
-                <article id="d1" class="hidden">
-                    <div class="rate-printview" id="d1p">
+                <article id="d1" class="rates hidden">
+                    <div class="rate-printview" id="1v">
                     </div>
-                    <div class="type" id="d1t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="1t">
+                        <form class="type-form"id="1-type-form">
+                            <input class="type-input" id="1-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
@@ -39,12 +39,12 @@
                     <input type="checkbox" id="checkbox2" class="checkbox hidden">
                     <span id="dday">DAY2</span>
                 </label>
-                <article id="d2" class="hidden">
-                    <div class="rate-printview" id="d2p">
+                <article id="d2" class="rates hidden">
+                    <div class="rate-printview" id="2v">
                     </div>
-                    <div class="type" id="d2t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="2t">
+                        <form class="type-form"id="2-type-form">
+                            <input class="type-input"id="2-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
@@ -54,12 +54,12 @@
                     <input type="checkbox" id="checkbox3" class="checkbox hidden">
                     <span id="dday">DAY3</span>
                 </label>
-                <article id="d3" class="hidden">
-                    <div class="rate-printview" id="d3p">
+                <article id="d3" class="rates hidden">
+                    <div class="rate-printview" id="3v">
                     </div>
-                    <div class="type" id="d3t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="3t">
+                        <form class="type-form"id="3-type-form">
+                            <input class="type-input"id="3-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
@@ -69,12 +69,12 @@
                     <input type="checkbox" id="checkbox4" class="checkbox hidden">
                     <span id="dday">DAY4</span>
                 </label>
-                <article id="d4" class="hidden">
-                    <div class="rate-printview" id="d4p">
+                <article id="d4" class="rates hidden">
+                    <div class="rate-printview" id="4v">
                     </div>
-                    <div class="type" id="d4t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="4t">
+                        <form class="type-form"id="4-type-form">
+                            <input class="type-input"id="4-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
@@ -84,12 +84,12 @@
                     <input type="checkbox" id="checkbox5" class="checkbox hidden">
                     <span id="dday">DAY5</span>
                 </label>
-                <article id="d5" class="hidden">
-                    <div class="rate-printview" id="d5p">
+                <article id="d5" class="rates hidden">
+                    <div class="rate-printview" id="5v">
                     </div>
-                    <div class="type" id="d5t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="5t">
+                        <form class="type-form"id="5-type-form">
+                            <input class="type-input"id="5-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
@@ -99,18 +99,21 @@
                     <input type="checkbox" id="checkbox6" class="checkbox hidden">
                     <span id="dday">DAY6</span>
                 </label>
-                <article id="d6" class="hidden">
-                    <div class="rate-printview" id="d6p">
+                <article id="d6" class="rates hidden">
+                    <div class="rate-printview" id="6v">
+
                     </div>
-                    <div class="type" id="d6t">
-                        <form id="type-form">
-                            <input id="type-input" type="text" placeholder="type here..." required>
+                    <div class="type" id="6t">
+                        <form class="type-form" id="6-type-form">
+                            <input class="type-input"id="6-type-input" type="text" placeholder="type here..." required>
                         </form>
                     </div>
                 </article>
             </section>
         </main>
     </div>
+    <script type="module" src="./index.js"></script>
+    <script type="module" src="./firebase.js"></script>
     <script src="./opcl.js"></script>
 </body>
 </html>
