--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <div id="main-s2-schadule" class="schadule hidden">
                     즐길 준비 되셨습니꽈?!
                 </div>
-                <a id="main-s2-footer" href="/schadule.html" class="hidden">전체 일정 보기</a>
                 <div id="name">
                     <div id="name-header">Choose traveler's Name</div>
                     <div id="names">
@@ -45,6 +44,14 @@
                         <div class="name" onclick="Name4()">김우섭</div>
                         <div class="name" onclick="Name5()">백종훈</div>
                     </div>
+                </div>
+                <div id="main-s2-footer"  class="hidden">
+                    <a href="/schadule.html">
+                        전체 일정 보기
+                    </a> 
+                    <a onclick="delName()">
+                        RENAME
+                    </a> 
                 </div>
             </div>
         </section>
