--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <div id="name">
                     <div id="name-header">Choose traveler's Name</div>
                     <div id="names">
-                        <div class="name" onclick="Name1()">김도혁</div>
-                        <div class="name" onclick="Name2()">한강익</div>
-                        <div class="name" onclick="Name3()">박정진</div>
-                        <div class="name" onclick="Name4()">김우섭</div>
-                        <div class="name" onclick="Name5()">백종훈</div>
+                        <div class="name" onclick="Name1()">도혁</div>
+                        <div class="name" onclick="Name2()">강익</div>
+                        <div class="name" onclick="Name3()">정진</div>
+                        <div class="name" onclick="Name4()">우섭</div>
+                        <div class="name" onclick="Name5()">종훈</div>
                     </div>
                 </div>
                 <div id="main-s2-footer"  class="hidden">
